# rpi_gyro

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml
data/: imu_samples_1.csv
manual_tests/: cursor_path_plot.py  im_pub.py  im_recv.py  settings.py  tk_plot.py  tk_plot_2d.py
rpi_gyro_reader/execs/: read_gyro.py
rpi_gyro_reader/gyro/: accel_circle_imu.py  accel_lissajous_imu.py  file_imu.py  iimu.py  imu_bmi160.py  imu_publisher.py  imu_receiver.py  virtualimu.py
rpi_gyro_reader/transformers/: av_transformer.py  column_selector_transformer.py  diff_transformer.py  itransformer.py  madgwick_transformer.py  pass_transformer.py
rpi_gyro_reader/transformers/cursor_movers/: acc_velocity_mover.py  icursormover.py  kalman_mover.py  kalman_mover_vel.py
tests/: test_tools.py
tests/gyro/: accel_circle_imu_test.py  accel_lissajous_imu_test.py  file_imu_test.py  iimu_test.py  imu_receiver_test.py  virtualimu_test.py
tests/transformers/: av_transformer_test.py  column_selector_transformer_test.py  diff_transformer_test.py  itransformer_test.py  madgwick_transformer_test.py  pass_transformer_test.py
tests/transformers/cursor_movers/: acc_velocity_mover_test.py  icursormover_test.py  kalman_mover_test.py  kalman_mover_vel_test.py
