[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rpi-gyro"
dynamic = ["version", "readme"]
dependencies = [
    
    'matplotlib',
    'pandas',
    'tabulate==0.9.0',
    'zmq',
]
requires-python = ">=3.9"
authors = [
  {name = "Pawel Trajdos", email = "pawel.trajdos@pwr.edu.pl"},
]
maintainers = [
  {name = "Pawel Trajdos", email = "pawel.trajdos@pwr.edu.pl"}
]
description = "reading gyro with rpi"

license = "BSD-3-Clause"
license-files = ["LICEN[CS]E.*"]
keywords = ["emg"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
rpi = [
    "Pi.GPIO>=0.7.1",
    "smbus2>=0.6.0",
]

[tool.setuptools.dynamic]
version = {attr = "rpi_gyro_reader.__version__"}  # any module attribute compatible with ast.literal_eval
readme = {file = ["README.md"]}

[project.urls]
Repository = "https://github.com/ptrajdos/rpi_gyro.git"

[tool.setuptools]
packages = { find = { include = ["rpi_gyro_reader", "rpi_gyro_reader.*"] } }

[project.scripts]
read_gyro = "rpi_gyro_reader.execs.read_gyro:main"